# arcade-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CONVENTIONS.md  Doxyfile  README.md  example.c  gamepad-example.c  vimcommands
include/: animation.h  arcade.h  arcobj.h  array_list.h  atlas.h  batch.h  camera.h  circ.h  collision.h  config.h  draw-call.h  forward-decl.h  game.h  geom.h  graphics.h  groups.h  hashmap.h  input.h  levels.h  lines.h  manager.h  matrix.h  multimedia.h  particles.h  poly.h  quadtree.h  rect.h  shaders.h  shape.h  simulation.h  sound.h  spatial_map.h  sprite.h  texture-region.h  texture.h  transform.h  types.h  util.h  window.h  world.h
src/: animation.c  arcobj.c  atlas.c  batch.c  camera.c  circ.c  collision.c  config.c  draw-call.c  game.c  geom.c  graphics.c  groups.c  hashmap.c  input.c  levels.c  lines.c  manager.c  matrix.c  multimedia.c  particles.c  poly.c  quadtree.c  rect.c  shaders.c  shape.c  simulation.c  sound.c  spatial_map.c  sprite.c  texture-region.c  texture.c  transform.c  util.c  window.c  world.c
tests/: config.c  framework.h  geom.c  tests.c
tools/: texture-packer.c
